--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
                 <div class="secondnav">
 
-                    <h1 class="welcome">Welcome</h1>
-                    <h1 class="welcome2">Kalathil Cars</h1>
+                    <h1 class="welcome">WELCOME</h1>
+                    <h1 class="welcome2">KALATHIL-CARS</h1>
                     <P class="thankyou">Thank you for visiting our Website. <br> We're thrilled to have you here. 
                     If you have any <br> questions, need assistance, or simply want to say<br> hello, don't hesitate to reach out to us! </P>
                     <a href="tel:+919946044449" class="social-button call">
@@ -81,7 +81,7 @@
                     
 
 
-                    <img class="buttonicon" src="img/Asset 1.svg" alt="">
+                    <img class="buttonicon" src="img/Asset 2.svg" alt="">
 
 
 
